--- a/BlazorApp5/Components/Layout/MainLayout.razor
+++ b/BlazorApp5/Components/Layout/MainLayout.razor
@@ -16,8 +16,8 @@
     </main>
 </div>
 
-<div id="blazor-error-ui">
-    An unhandled error has occurred.
+<div>
+   
     <a href="" class="reload">Reload</a>
-    <a class="dismiss">🗙</a>
+   
 </div>
