--- a/BlazorApp5/Components/_Imports.razor
+++ b/BlazorApp5/Components/_Imports.razor
@@ -6,7 +6,7 @@
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using BlazorApp5
-@using BlazorApp5.Components
-@using BlazorApp5.Models
-@using BlazorApp5.Services
+@using BlazorAcademy
+@using BlazorAcademy.Components
+@using BlazorAcademy.Models
+@using BlazorAcademy.Services
