--- a/BlazorApp5/Components/Layout/NavMenu.razor
+++ b/BlazorApp5/Components/Layout/NavMenu.razor
@@ -1,4 +1,4 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+﻿@* <div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="">BlazorApp5</a>
     </div>
@@ -20,11 +20,11 @@
             </NavLink>
         </div>
 
-        <div class="nav-item px-3">
+      <div class="nav-item px-3">
             <NavLink class="nav-link" href="weather">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
             </NavLink>
-        </div>
+        </div>  
     </nav>
 </div>
-
+ *@
